--- a/content/docker/Create Database Postgres with Docker.mdx
+++ b/content/docker/Create Database Postgres with Docker.mdx
@@ -2,9 +2,7 @@
 title: 'Create Database Postgres with Docker'
 publishedAt: '2024-04-07'
 summary: 'In the ever-evolving landscape of software development, the debate between dynamic and static typing continues to be a hot topic.'
-tags:
-  - Docker
-  - Postgresql
+tags: [Docker, Postgresql]
 ---
 
 This command get de last version of postgres
